--- a/src/app/Component/Cart/cart/cart.component.html
+++ b/src/app/Component/Cart/cart/cart.component.html
@@ -76,6 +76,8 @@
                         <app-footer></app-footer>
                     </ng-container>
            
-                    <ng-container *ngIf="isLoading " class="position-fixed top-50 start-50 translate-middle">
-                        <app-loading-spinner></app-loading-spinner>
+                    <ng-container *ngIf="isLoading">
+                        <div class="position-fixed top-50 start-50 translate-middle">
+                            <app-loading-spinner></app-loading-spinner>
+                        </div>
                     </ng-container>
