--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -40,8 +40,8 @@
                       <mat-option value="rejected">Rejected</mat-option>
                     </mat-select>
                   </mat-form-field>
-                </td>
-                <td><button class="btn btn-danger" (click)="OpenDialog(item._id)">Remove</button></td>
+                </td >
+                <td class="action-buttons"><button class="btn btn-danger" (click)="OpenDialog(item._id)">Remove</button></td>
               </tr>
             </tbody>
           </table>
