--- a/src/app/Component/admin-dashboard/Orders/content.component.css
+++ b/src/app/Component/admin-dashboard/Orders/content.component.css
@@ -38,12 +38,6 @@
   height: auto;
   display: block;
 }
-
-.action-buttons {
-  display: flex;
-  gap: 8px;
-}
-
 /* Adjustments for smaller screens */
 @media screen and (max-width: 768px) {
   .image-container {
@@ -131,6 +125,11 @@
     text-transform: uppercase;
     padding: 12px;
     border: none;
+}
+.action-buttons
+{
+  justify-content:center ;
+
 }
 tbody tr
 {
