--- a/src/app/Component/admin-dashboard/admin-board/admin-board.component.css
+++ b/src/app/Component/admin-dashboard/admin-board/admin-board.component.css
@@ -1,16 +1,21 @@
 mat-sidenav-container {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  z-index: 12;
 }
 
 mat-sidenav {
   width: 18%;
+  margin: 0;
+  padding: 0;
 }
 
 mat-toolbar {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-top: 0;
 }
 
 .navigation ul {
@@ -45,6 +50,7 @@ mat-toolbar {
 }
 
 .tab-buttons button.active::after {
+  margin-top: 10px;
   width: 100%;
   background-color: #127103;
 }
@@ -120,7 +126,7 @@ mat-toolbar {
   height: 50px;
   background-color: transparent;
   border-radius: 50%;
-  box-shadow: 10px 10px 0 10px #ffffff;
+  box-shadow: 10px #ffffff;
   pointer-events: none;
 }
 
@@ -133,8 +139,8 @@ mat-toolbar {
   width: 50px;
   height: 50px;
   background-color: transparent;
-  border-radius: 50%;
-  box-shadow: 10px -10px 0 10px #F5F5F5;
+  border-radius: 20%;
+  box-shadow:  10px #F5F5F5;
   pointer-events: none;
 }
 
@@ -206,7 +212,7 @@ mat-toolbar {
   align-items: center;
   flex-direction: row;
   cursor: pointer;
-  box-shadow: 0 7px 25px rgba(154, 154, 154, 0.5);
+  box-shadow: 0 7px 25px rgba(225, 225, 225, 0.5);
 }
 
 .cardBox .card .numbers {
@@ -219,7 +225,7 @@ mat-toolbar {
 .cardBox .card .cardName {
   color: #999;
   font-size: 1.1rem;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .cardBox .card .iconBx {
@@ -253,7 +259,7 @@ mat-toolbar {
   display: grid;
   background: white;
   padding: 20px;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 7px 25px rgba(194, 194, 194, 0.8);
   border-radius: 20px;
   grid-template-rows: 10% 90%;
 }
@@ -361,7 +367,7 @@ mat-toolbar {
   min-height: 500px;
   padding: 20px;
   background: white;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 7px 25px rgba(165, 165, 165, 0.8);
   border-radius: 20px;
 }
 
