--- a/src/app/SharedComponent/confirm-message/confirm-message.component.css
+++ b/src/app/SharedComponent/confirm-message/confirm-message.component.css
@@ -3,11 +3,11 @@
     font-size: 24px;
     font-weight: bold;
   }
-  
+
   .custom-dialog-content {
     font-size: 18px;
   }
-  
+
   .custom-dialog-actions {
     /* justify-content: flex-end; */
     align-self: end;
@@ -15,7 +15,7 @@
   .custom-dialog-actions button{
     margin-left: 5px;
   }
-  
+
   /* Custom styling for the entire dialog */
   .custom-dialog {
     width: 400px;
@@ -23,10 +23,11 @@
     padding: 1rem;
     background-color: black;
   }
-  
+
   .dialog-container{
     padding: 1rem;
-    background-color: rgb(55, 125, 128);
+    background-color:#459780;
+    color: aliceblue;
     height: 100%;
     display: flex;
     flex-direction: column;
