--- a/src/app/Component/user-orders/user-orders.component.html
+++ b/src/app/Component/user-orders/user-orders.component.html
@@ -1,1 +1,26 @@
-<p>user-orders works!</p>
+
+<!-- <div class="container bg-light p-2">
+    <div class="row">
+        <div class="col-12 text-center p-2 m-2">
+            <h1>Your Orders</h1>
+        </div>
+        <div class="row">
+            <table class="table table-striped table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+              
+                  </tr>
+                
+                </tbody>
+              </table>
+        </div>
+    </div>
+</div> -->
