--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -14,7 +14,7 @@
             <td>Total price</td>
             <td>Amount</td>
             <td>Status</td>
-            <td>Update Status</td>
+            <td>Details</td>
             <td>Delete </td>
           </tr>
         </thead>
@@ -24,11 +24,11 @@
             <!-- <td>{{ item.productId?.name }}</td> -->
             <td>{{ item.user.email }}</td>
             <td>{{ item.createdAt | date }}</td>
-            <td>
+            <!-- <td>
               <ul>
                 <li  *ngFor="let p of item.cartItems"> {{p.product.title}}</li>
               </ul>
-            </td>
+            </td> -->
             <td>{{ item.totalOrderPrice }}</td>
             <td>{{ item.amount }}</td>
             <td>{{ item.status }}</td>
@@ -42,7 +42,8 @@
                 </mat-select>
               </mat-form-field>
             </td>
-            <td><button class="btn btn-danger" (click)="OpenDialog(item._id)"> remove </button></td>
+            <td><button class="btn btn-info" (click)="getOrder(item._id)"> More info </button></td>
+            <td><button class="btn btn-danger" (click)="OpenDialog(item._id)"> Cancel order </button></td>
 
 
           </tr>
