--- a/src/app/Component/Admin/edit-product/edit-product.component.css
+++ b/src/app/Component/Admin/edit-product/edit-product.component.css
@@ -15,7 +15,11 @@ color: red;
   flex-wrap: wrap;
   margin-top: 10px;
 }
-
+.bold-label {
+  /* font-weight: bold; */
+ color:  #146c43;
+  font-size: 1rem;
+}
 .color-circle {
   display: inline-block;
   width: 30px;
