--- a/src/app/Component/Admin/edit-product/edit-product.component.html
+++ b/src/app/Component/Admin/edit-product/edit-product.component.html
@@ -15,28 +15,28 @@
             </div>
             </div>
               <div class="col-12">
-                <label for="title" class="form-label">Product title</label>
+                <label for="title" class="form-label bold-label">Product title</label>
               <input type="text" formControlName="title" class="form-control">
               <div class="form-text" *ngIf="editProductForm.get('title')?.invalid && (editProductForm.get('title')?.touched)">
                 Please provide a valid title for the product
               </div>
             </div>
             <div class="col-md-6">
-              <label for="quantity" class="form-label">Quantity</label>
+              <label for="quantity" class="form-label bold-label">Quantity</label>
               <input type="number" min="1" max="5000" formControlName="quantity" class="form-control">
               <div class="form-text" *ngIf="editProductForm.get('quantity')?.invalid && (editProductForm.get('quantity')?.touched)">
                 Please provide a valid quantity for the product
               </div>
             </div>
             <div class="col-md-6">
-              <label for="sold" class="form-label">Sold</label>
+              <label for="sold" class="form-label bold-label">Sold</label>
               <input type="number"  min="0" max="5000" formControlName="sold" class="form-control">
               <div class="form-text" *ngIf="editProductForm.get('sold')?.invalid && (editProductForm.get('sold')?.touched)">
                 Please provide a valid sold value for the product
               </div>
             </div>
             <div class="col-12">
-              <label for="price" class="form-label">Price</label>
+              <label for="price" class="form-label bold-label">Price</label>
               <input type="number" formControlName="price" class="form-control">
               <div class="form-text" *ngIf="editProductForm.get('price')?.invalid && (editProductForm.get('price')?.touched)">
                 Please provide a valid price for the product
@@ -44,20 +44,20 @@
             </div>
 
             <div class="col-md-6">
-              <label for="category" class="form-label">Category</label>
+              <label for="category" class="form-label bold-label">Category</label>
               <select formControlName="category" class="form-select">
                 <option *ngFor="let cat of allCategories" [value]="cat.id">{{ cat.name }}</option>
               </select>
             </div>
             <div class="col-md-6">
-              <label for="company" class="form-label">Company</label>
+              <label for="company" class="form-label bold-label">Company</label>
               <input type="text" formControlName="company" class="form-control">
               <div class="form-text" *ngIf="editProductForm.get('company')?.invalid && (editProductForm.get('company')?.touched)">
                 Please provide a valid company for the product
               </div>
             </div>
             <div class="col-12">
-              <label for="Allcolors" class="form-label">Colors</label>
+              <label for="Allcolors" class="form-label bold-label">Colors</label>
               <div class="input-group">
                 <input id="colorInput" type="color" class="form-control" name="Allcolors">
                 <button class="btn btn-outline-secondary" type="button" (click)="addColor()">Add Color</button>
@@ -73,15 +73,15 @@
               </div>
 
             <div class="col-12">
-              <label for="description" class="form-label">Description</label>
+              <label for="description" class="form-label bold-label">Description</label>
               <textarea formControlName="description" class="form-control" rows="4" required></textarea>
               <div class="form-text" *ngIf="editProductForm.get('description')?.invalid && (editProductForm.get('description')?.touched)">
                 Please provide a valid description for the product
               </div>
             </div>
-            <div class="col-12">
-              <button type="submit" class="btn btn-primary" >Save changes</button>
-            </div>
+            <div class="col-md-12 mb-3 text-center">
+              <button class="btn btn-primary" type="submit" style="background-color: #198754; border-color: #198754;" >Save Changes</button>
+             </div>
           </form>
       </div>
     </div>
