--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -42,9 +42,9 @@
           <select class="form-select ms-2 text-success" aria-label="Sort By" [(ngModel)]="sortBy"
             (change)="onSortChange(sortBy)">
             <option selected value="">Sort By</option>
-            <option value="price">Price (Low to High)</option>
-            <option value="price-desc">Price (High to Low)</option>
-            <option value="category">Category (A to Z)</option>
+            <option value="price">Price ⬆️</option>
+            <option value="price-desc">Price ⬇️</option>
+            <option value="category">Category ⬆️</option>
           </select>
           <!-- end sort -->
         </div>
@@ -52,18 +52,13 @@
       <div class=" col-sm-3 m-auto"
         *ngFor="let product of receivedProducts |paginate: {itemsPerPage:itemsPerPage,currentPage:p}">
         <div class="card mb-3 custom-card">
-          <div class="divImg">
+          <div>
             <img class="card-img-top product-image" [src]="getImageUrl(product.image)" [alt]="product.title">
           </div>
           <div class="card-body text-center">
             <h5 class="card-title productTitle" [routerLink]="['/products', product._id]">{{ product.title }}</h5>
             <p class="card-text">{{ product.description }}</p>
             <p class="card-text">Price : {{ product.price | currency:'EGP':'symbol' }}</p>
-
-            <!-- <button class="btn btn-outline-success  btn-details" [routerLink]="['/products', product._id]">
-              <i class="bi bi-eye-fill"></i>
-            </button> -->
-
             <button class="btn btn-success mb-2 cart-btn" (mouseenter)="hoveredProduct = product; isHovered = true"
               (mouseleave)="hoveredProduct = null; isHovered = false">
               <i style="font-size: 30px; color: white;" class="bi bi-cart-plus"></i>
