--- a/src/app/Component/categories/categories.component.css
+++ b/src/app/Component/categories/categories.component.css
@@ -91,8 +91,14 @@
 }
 
 /*  */
+.productCard {
+  padding: 10px;
+  width: 323px;
+  margin: 10px;
+}
+
+/*  */
 .category-image {
-  width: 50%;
   height: auto;
 }
 
