--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -61,7 +61,7 @@
             <p class="card-text">Price : {{ product.price | currency:'EGP':'symbol' }}</p>
             <button class="btn btn-success mb-2 cart-btn" (mouseenter)="hoveredProduct = product; isHovered = true"
               (mouseleave)="hoveredProduct = null; isHovered = false">
-              <i style="font-size: 30px; color: white;" class="bi bi-cart-plus"></i>
+              <i style="font-size: 30px; color: white;" class="bi bi-cart-plus m-auto"></i>
               <span class="badge badge-primary" *ngIf="getHoveredProductQuantity(product) !== 0">
                 {{ getHoveredProductQuantity(product) }}
               </span>
