--- a/src/app/Component/user-orders/user-orders.component.html
+++ b/src/app/Component/user-orders/user-orders.component.html
@@ -1,26 +1,45 @@
-
-<!-- <div class="container bg-light p-2">
-    <div class="row">
-        <div class="col-12 text-center p-2 m-2">
-            <h1>Your Orders</h1>
-        </div>
-        <div class="row">
-            <table class="table table-striped table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-              
-                  </tr>
-                
-                </tbody>
-              </table>
+<div class=" rounded bg-light container gap-3 p-3 mt-3" *ngIf="!isLoading">
+    <div class="row ">
+        <div class="col text-center fs-1 fw-bold m-2">
+            Your Orders
         </div>
     </div>
-</div> -->
+    <div *ngFor="let order of orders; let i = index">
+        <div class="col-12 text-center bg-success p-2 m-2 fs-4 fw-bold text-white rounded">{{i+1}}</div>
+        <div class="col-12  col-md-8 bg-white p-3 rounded mt-3 scrollable-container">
+            <div *ngFor="let item of orders[i].cartItems; let j = index">
+                <div class="row">
+                    <div class=" col m-4 p-3 ">
+                        <img class="w-75" [src]="getImageUrl(orders[0].cartItems[0].product.image)">
+                    </div>
+                    <div class="col-12 col-md-8   m-4 p-3">
+                        <div class="fw-bold col-12">{{item}}</div>
+                        <div><span class="fw-bold">QTY :</span> {{order[i].item.quantity}}</div>
+                        <div><span class="fw-bold">Price:</span> $ {{order[i].item.price}}</div>
+                    </div>
+                    {{}}
+                </div> 
+            </div>     
+        </div>
+        <div class="col-12 col-md-4 p-3">
+            <div class="fw-bold col-12 text-center p-3">Details</div>
+            <div class="fw-bold col-12 bg-white p-3 rounded mt-1 ">date<span class="text-green">{{order.orderAt | date:'medium'}}</span></div>
+            <div class="fw-bold col-12 p-2">address</div>
+            <!-- <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>city :</span>{{order.address.city}}</div>
+            <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>postalCode :</span>{{order.address.postalCode}}</div>
+            <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>street :</span>{{order.address.street}}</div>
+            <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>Total Order Price</span>  : $ {{order.totalOrderPrice}}</div>     
+          -->
+        </div>
+    </div>
+
+
+
+
+
+    
+</div>
+
+<div *ngIf="isLoading"  class="position-fixed top-50 start-50 translate-middle">
+    <app-loading-spinner></app-loading-spinner>
+    </div>
