--- a/src/app/Component/user-orders/user-orders.component.html
+++ b/src/app/Component/user-orders/user-orders.component.html
@@ -1,4 +1,4 @@
-<div class=" rounded bg-light container gap-3 p-3 mt-3" *ngIf="!isLoading">
+<!-- <div class=" rounded bg-light container gap-3 p-3 mt-3" *ngIf="!isLoading">
     <div class="row ">
         <div class="col text-center fs-1 fw-bold m-2">
             Your Orders
@@ -25,11 +25,11 @@
             <div class="fw-bold col-12 text-center p-3">Details</div>
             <div class="fw-bold col-12 bg-white p-3 rounded mt-1 ">date<span class="text-green">{{order.orderAt | date:'medium'}}</span></div>
             <div class="fw-bold col-12 p-2">address</div>
-            <!-- <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>city :</span>{{order.address.city}}</div>
+            <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>city :</span>{{order.address.city}}</div>
             <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>postalCode :</span>{{order.address.postalCode}}</div>
             <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>street :</span>{{order.address.street}}</div>
             <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>Total Order Price</span>  : $ {{order.totalOrderPrice}}</div>     
-          -->
+         
         </div>
     </div>
 
@@ -42,4 +42,4 @@
 
 <div *ngIf="isLoading"  class="position-fixed top-50 start-50 translate-middle">
     <app-loading-spinner></app-loading-spinner>
-    </div>
+    </div> -->
