--- a/src/app/Component/categories/categories.component.css
+++ b/src/app/Component/categories/categories.component.css
@@ -33,7 +33,8 @@
 }
 
 .productTitle:hover {
-  font-size: 27px;
+  font-size: 22px;
+  line-height: 1;
   font-weight: bolder;
 }
 
@@ -93,7 +94,7 @@
 /*  */
 .productCard {
   padding: 10px;
-  width: 323px;
+  width: 370px;
   margin: 10px;
 }
 
@@ -133,7 +134,7 @@
 }
 
 .card-title {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
